--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"vitest": "^2.0.4"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.47.10",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
