--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"compromise": "^14.14.3",
+		"word-definition": "^2.1.6",
 		"xlsx": "^0.18.5"
 	}
 }
