--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"compromise": "^14.14.3",
+		"svelte-select": "^5.8.3",
 		"word-definition": "^2.1.6",
 		"word-list": "^4.1.0",
+		"word-list-json": "^0.2.0",
 		"xlsx": "^0.18.5"
 	}
 }
