--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"compromise": "^14.14.3",
 		"openai": "^4.77.3",
+		"svelte-dnd-action": "^0.9.54",
 		"svelte-select": "^5.8.3",
 		"word-definition": "^2.1.6",
 		"word-list": "^4.1.0",
